k8s/webflix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflix-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webflix
  template:
    metadata:
      labels:
        app: webflix
    spec:
      containers:
        - image: webflix/webflix:2020-12-02-06-20-11
          name: webflix
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: webflix
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: webflix
