k8s/webflix-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webflix-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /webflix/(.*)
            backend:
              serviceName: webflix
              servicePort: 8080
          - path: /video-stream/(.*)
            backend:
              serviceName: video-stream
              servicePort: 8080
          - path: /video-upload/(.*)
            backend:
              serviceName: video-upload
              servicePort: 8080
          - path: /users/(.*)
            backend:
              serviceName: users
              servicePort: 8080
          - path: /comments/(.*)
            backend:
              serviceName: comments
              servicePort: 8080
          - path: /ratings/(.*)
            backend:
              serviceName: ratings
              servicePort: 8080
